# M13-Verteilte-Systeme

./: CMakeLists.txt  README.md  client.c  client.py  server.c  server.py
01_load_deamon/: hosts.txt  server.c  server.py
02_ssh_proxy/: CMakeLists.txt  tcp_proxy.c
03_ssh_proxy_multiuser/include/: getPi.h
03_ssh_proxy_multiuser/src/: getPi.c  main.c
04_game_of_life/: CMakeLists.txt
04_game_of_life/include/: deadAllive.h  fieldFuse.h  fieldSlice.h  fieldsSlice.h  followingCellState.h  followingFieldState.h  followingSliceState.h  inicializeSlices.h  showCells.h  showNumbers.h
04_game_of_life/src/: fieldFuse.c  fieldSlice.c  fieldsSlice.c  followingCellState.c  followingFieldState.c  followingSliceState.c  inicializeSlices.c  main.c  showCells.c  showNumbers.c
05_MPI/src/: main.c
